[package]
name = "pancakedb"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
memmap = "0.7.0"
netlib = { path = "../../rust/netlib" }
aho-corasick = "0.7.15"
